Inputting Video Links works with video details. getting it to stay on the page is a work in progress.

--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,11 @@
              "js": ["enqueue.js"]
 
             }
-        ]
+        ],
+
+    "background": {
+        "service_worker": "background.js"
+    }
 
     }
 
